--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,71 @@
+body {
+    background-color: #000000;
+    color: white;
+}
+
+#main-img {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+}
+
+img {
+    width: 50vw;
+    left: 50%;
+    right: 50%;
+    margin-left: -50vw;
+    margin-right: -50vw;
+}
+
+h1 {
+    font-family: 'IM Fell English SC', serif;
+    font-size: 40px;
+    padding: 20px;
+}
+
+#button-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    margin-bottom: 10%;
+}
+
+#resetButton {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    color: white;
+    padding: 20px;
+    font-family: 'IM Fell English SC', serif;
+    font-size: 18px;
+    color: red;
+    background-color: black;
+    border: 1px solid white;
+    border-radius: 4px;
+}
+
+#intro-text, #text-container {
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+}
+
 #randomWord {
-    font-size: 30px;
+    font-size: 50px;
     letter-spacing: 0.9em;
+    font-family: 'IM Fell English SC', serif;
+}
+
+#guesses {
+    font-family: 'IM Fell English SC', serif;
+    justify-self: center;
+    margin-top: 10%;
+    margin-bottom: 5%;
+    font-size: 20px;
+    color: red;
+}
+
+#music-controller{
+    color: white;
+    background-color: black;
 }
