--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,28 +1,55 @@
 body {
+    background-image: url("../images/ST_BG2.png");
+    background-repeat: no-repeat;
+    background-size: cover;
     background-color: #000000;
     color: white;
+    font-family: 'Oxanium';
 }
 
-#main-img {
+/* WORD GUESS TITLE -------------------------*/
+
+#title-box {
+    font-family: 'Oxanium';
+    font-size: 60px;
     display: grid;
     grid-template-columns: 1fr;
-    justify-items: center;
+    margin: 5% 0% 0% 0%;
 }
 
-img {
-    width: 50vw;
-    left: 50%;
-    right: 50%;
-    margin-left: -50vw;
-    margin-right: -50vw;
+#the-title {
+    justify-self: center;
+    color:#D02116;
+    text-shadow: 0 0 40px #8E1706;
 }
 
-h1 {
-    font-family: 'IM Fell English SC', serif;
-    font-size: 40px;
-    padding: 20px;
+/* SCORE BOX ---------------------------------- */
+#score-box {
+    font-family: 'Oxanium';
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: 200px;
+    margin: -20px 5% 0% 5%;
 }
 
+#guesses-left-box, #letters-guessed-box {
+    color: white;
+    font-size: 20px;
+    text-shadow: 0 0 10px #FB3287;
+    border: 3px solid #FB3287;
+    border-radius: 5px;
+    box-shadow: inset 0 0 10px #F8A2D4,
+                0 0 5px #F8A2D4;
+    background-color: black;
+    justify-self: center;
+    padding: 10%;
+    min-width: 150px;
+}
+/* ----------------------------------------- */
+
+
+/* START / RESET BUTTON -------------------- */
 #button-container {
     display: grid;
     grid-template-columns: 1fr;
@@ -34,47 +61,66 @@ h1 {
     display: grid;
     grid-template-columns: 1fr;
     justify-items: center;
-    color: white;
+    margin-top: 5%;
     padding: 20px;
-    font-family: 'IM Fell English SC', serif;
+    font-family: 'Oxanium';
     font-size: 25px;
-    color: red;
+    color: white;
     background-color: black;
-    border: 1px solid white;
+    border: 3px solid #23CDF2;
     border-radius: 4px;
+    box-shadow: inset 0 0 5px #D8EDF4,
+                0 0 5px #D8EDF4;
+                -webkit-animation: glow 1s ease-in-out infinite alternate;
+                -moz-animation: glow 1s ease-in-out infinite alternate;
+                animation: glow 1s ease-in-out infinite alternate;
 }
 
-#intro-text, #text-container, #music-player {
+@-webkit-keyframes glow {
+    from {
+      text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #e60073, 0 0 40px #e60073, 0 0 50px #e60073, 0 0 60px #e60073, 0 0 70px #e60073;
+    }
+    
+    to {
+      text-shadow: 0 0 10px #fff, 0 0 20px #23CDF2, 0 0 30px #23CDF2, 0 0 40px #23CDF2, 0 0 50px #23CDF2, 0 0 60px #23CDF2, 0 0 70px #23CDF2;
+    }
+  }
+/* ----------------------------------------- */
+
+#random-word-box {
     display: grid;
     grid-template-columns: 1fr;
-    justify-items: center;
 }
+
 
 #randomWord {
     font-size: 50px;
     letter-spacing: 0.9em;
-    font-family: 'IM Fell English SC', serif;
+    font-family: 'Oxanium';
+    justify-self: center;
+    padding: 12% 0 0 5%;
+    background-color: black;
+    border-radius: 5px;
+    border: 3px solid #23CDF2;
+    box-shadow: inset 0 0 10px #CFF3FD,
+                0 0 5px #CFF3FD;
 }
+
 
 #all-guesses {
     font-size: 30px;
     letter-spacing: 0.9em;
-    font-family: 'IM Fell English SC', serif;
+    font-family: 'Oxanium';
     margin-bottom: 5%;
 }
 
 #guesses {
-    font-family: 'IM Fell English SC', serif;
+    font-family: 'Oxanium';
     justify-self: center;
-    margin-top: 1%;
-    margin-bottom: 5%;
     font-size: 40px;
-    color: red;
+    color: #FB3287;
 }
 
-#guesses-left-text {
-    margin-top: 5%;
-}
 
 #music-controller{
     color: white;
