--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ body {
     font-family: 'Oxanium';
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(100px, auto);
+    grid-auto-rows: minmax(50px, auto);
     grid-auto-rows: 200px;
     margin: -20px 5% 0% 5%;
 }
@@ -94,14 +94,14 @@ body {
 
 
 #randomWord {
-    font-size: 50px;
+    font-size: 3em;
     letter-spacing: 0.9em;
     font-family: 'Oxanium';
     justify-self: center;
     padding: 12% 0 0 5%;
     background-color: black;
     border-radius: 5px;
-    border: 3px solid #23CDF2;
+    border: 5px solid #23CDF2;
     box-shadow: inset 0 0 10px #CFF3FD,
                 0 0 5px #CFF3FD;
 }
