--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,7 +13,7 @@ body {
     font-family: 'Oxanium';
     font-size: 60px;
     display: grid;
-    grid-template-columns: 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     margin: 5% 0% 0% 0%;
 
     -webkit-animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
@@ -183,17 +183,27 @@ body {
     background-color: black;
 }
 
+#music-div {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    background-color: black;
+    border: 3px solid #FB3287;
+    border-radius: 5px;
+    box-shadow: inset 0 0 10px #F8A2D4,
+                0 0 5px #F8A2D4;
+    max-width: 100px;    
+    justify-self: center;
+    position: absolute;
+    right: 100px;
+}
+
 #music-player, #pause-player {
     font-size: 30px;
     width: 50px;
-    background-color: black;
-    color: red;
+    background-color: rgba(76, 175, 80, 0.0);
+    color: #FB3287;
     border: none;
-}
+    justify-self: center;
 
-#music-div {
-    display: grid;
-    grid-template-columns: 1fr;
-
-
+    
 }
