--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,19 +1,20 @@
 body {
     background-image: url("../images/ST_BG2.png");
     background-repeat: no-repeat;
-    background-size: cover;
-    background-color: #000000;
-    color: white;
+    background-size: 100%;
+    background-color: black;
     font-family: 'Oxanium';
+    color:white;
+    margin: 0%;
 }
 
 /* WORD GUESS TITLE -------------------------*/
 
 #title-box {
     font-family: 'Oxanium';
-    font-size: 60px;
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
+    /* grid-template-columns: 1fr 1fr 1fr; */
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
     margin: 5% 0% 0% 0%;
 
     -webkit-animation: tracking-in-expand-fwd 1s cubic-bezier(0.215, 0.610, 0.355, 1.000) forwards;
@@ -55,6 +56,7 @@ body {
 
 #the-title {
     justify-self: center;
+    font-size: 55px;
     color:rgb(88, 16, 5);
     text-shadow: 0 0 40px #D02116;
     -webkit-text-stroke: 2px #D02116;
@@ -64,10 +66,10 @@ body {
 #score-box {
     font-family: 'Oxanium';
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: minmax(50px, auto);
-    grid-auto-rows: 200px;
-    margin: -20px 5% 0% 5%;
+    grid-template-columns: repeat(auto-fit, minmax(240px, 1fr));
+    grid-gap: 1rem;
+    width: 100%;
+    
 }
 
 #guesses-left-box, #letters-guessed-box {
@@ -131,7 +133,7 @@ body {
 #you-win {
     color: white;
     text-shadow: 0 0 40px #23CDF2;
-    font-size: 100px;
+    font-size: 10vh;
     justify-content: center;
     justify-self: center;
     padding: 10px;
@@ -142,20 +144,22 @@ body {
 #random-word-box {
     display: grid;
     grid-template-columns: 1fr;
+    width: 100%;
 }
 
 
 #randomWord {
     font-size: 3em;
-    letter-spacing: 0.9em;
+    letter-spacing: 0.9vh;
     font-family: 'Oxanium';
     justify-self: center;
-    padding: 12% 0 0 5%;
+    padding: 5%;
     background-color: black;
     border-radius: 5px;
     border: 5px solid #23CDF2;
     box-shadow: inset 0 0 10px #CFF3FD,
                 0 0 5px #CFF3FD;
+
 }
 
 #guesses-left-box {
@@ -187,14 +191,14 @@ body {
     display: grid;
     grid-template-columns: 1fr 1fr;
     background-color: black;
-    border: 3px solid #FB3287;
+    border: 1px solid #FB3287;
     border-radius: 5px;
     box-shadow: inset 0 0 10px #F8A2D4,
                 0 0 5px #F8A2D4;
     max-width: 100px;    
     justify-self: center;
-    position: absolute;
-    right: 100px;
+    /* position: absolute;
+    right: 100px; */
 }
 
 #music-player, #pause-player {
@@ -204,6 +208,10 @@ body {
     color: #FB3287;
     border: none;
     justify-self: center;
-
-    
 }
+
+/* MEDIA QUERIES */
+
+@media only screen and (min-width: 360px) {
+
+  }
